<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="spotify_streamer_desc">my spotify app</string>
    <string name="scores_app">SCORES APP</string>
    <string name="scores_app_desc">my scores app</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="library_app_desc">my library app</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="build_it_bigger_desc">my build it bigger app</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="xyz_reader_desc">my xyz reader app</string>
    <string name="capstone">CAPSTONE:MY OWN APP</string>
    <string name="capstone_desc">my capstone app</string>
</resources>
