<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    android:paddingBottom="@dimen/activity_vertical_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.portfolio.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#c6edf2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginBottom="45dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/buttonSpotifyStreamer"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/spotify_streamer_desc"
        android:onClick="processClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/buttonScoresApp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/scores_app_desc"
        android:onClick="processClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/buttonLibraryApp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/library_app_desc"
        android:onClick="processClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/buttonBuildItBigger"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/build_it_bigger_desc"
        android:onClick="processClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/buttonXyzReader"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/xyz_reader_desc"
        android:onClick="processClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/buttonCapstone"
        android:background="#e4007c"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/capstone_desc"
        android:onClick="processClick" />

</LinearLayout>
